--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "mean_second",
-  "version": "0.0.1",
-  "dependencies": {
-    "body-parser": "^1.8.4",
-    "compression": "^1.0.11",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.4.2",
-    "cookie-parser": "^1.3.5",
-    "ejs": "^1.0.0",
-    "express": "^4.8.8",
-    "express-session": "^1.7.6",
-    "method-override": "^2.2.0",
-    "mongoose": "^3.8.40",
-    "morgan": "^1.3.2",
-    "passport": "^0.2.2",
-    "passport-facebook": "^1.0.3",
-    "passport-google-oauth": "^0.1.5",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
-    "socket.io": "^1.1.0"
-  }
+	"name": "MEAN",
+	"version": "0.0.5",
+	"dependencies": {
+		"express": "~4.8.8",
+		"morgan": "~1.3.0",
+		"compression": "~1.0.11",
+		"body-parser": "~1.8.0",
+		"method-override": "~2.2.0",
+		"express-session": "~1.7.6",
+		"ejs": "~1.0.0",
+		"mongoose": "~3.8.15"
+	}
 }
