--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "method-override": "~2.2.0",
     "mongoose": "^4.0.1",
     "morgan": "~1.3.0",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
