--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "dependencies": {
     "body-parser": "~1.8.0",
     "compression": "~1.0.11",
+    "connect-flash": "^0.1.1",
     "ejs": "~1.0.0",
     "express": "~4.8.8",
-    "express-session": "~1.7.6",
+    "express-session": "^1.7.6",
     "method-override": "~2.2.0",
     "mongoose": "^4.0.1",
     "morgan": "~1.3.0",
